Bug 436272 - Changing the wallpaper sets the wallpaper, but the KCM does not remember it
Summary: Changing the wallpaper sets the wallpaper, but the KCM does not remember it
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: 5.21.4
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
: 454966 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-04-27 17:59 UTC by logicalwillow
Modified: 2023-08-01 19:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description logicalwillow 2021-04-27 17:59:31 UTC
SUMMARY
When changing the wallpaper for SDDM (with the Breeze login screen), it applies the wallpaper, but System Settings doesn't remember it. When you go back to change the wallpaper, the default Milky Way wallpaper shows up instead of the one I set.

STEPS TO REPRODUCE
1. Change the wallpaper for the Breeze login screen
2. Apply settings
3. Go to another page and then go back to SDDM settings
4. Click on the button to change the wallpaper
5. It shows the default wallpaper, not the one you set

OBSERVED RESULT
The wallpaper is not remembered, and it shows the default wallpaper instead of the wallpaper I have set.

EXPECTED RESULT
The image should show the wallpaper I set.

SOFTWARE/OS VERSIONS
Linux: Kernel 5.4, Neon 5.21
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-04-29 14:17:17 UTC
Can reproduce.
Comment 2 Fabian Vogt 2023-07-28 20:19:21 UTC
Git commit 5993858bd6da8653c172ff6bab16b4a86cc98fe1 by Fabian Vogt.
Committed on 28/07/2023 at 22:10.
Pushed by fvogt into branch 'master'.

Fix loading theme.conf.user

Add the missing dot, it tried to load theme.confuser without this.

M  +1    -1    src/themesmodel.cpp

https://invent.kde.org/plasma/sddm-kcm/-/commit/5993858bd6da8653c172ff6bab16b4a86cc98fe1
Comment 3 Fabian Vogt 2023-07-28 20:19:41 UTC
Git commit 05d2cf913f42a783bd4e3d0823761da25960183d by Fabian Vogt.
Committed on 28/07/2023 at 22:19.
Pushed by fvogt into branch 'Plasma/5.27'.

Fix loading theme.conf.user

Add the missing dot, it tried to load theme.confuser without this.


(cherry picked from commit 5993858bd6da8653c172ff6bab16b4a86cc98fe1)

M  +1    -1    src/themesmodel.cpp

https://invent.kde.org/plasma/sddm-kcm/-/commit/05d2cf913f42a783bd4e3d0823761da25960183d
Comment 4 Patrick Silva 2023-08-01 19:59:42 UTC
*** Bug 454966 has been marked as a duplicate of this bug. ***