Fix loading theme.conf.user

Add the missing dot, it tried to load theme.confuser without this.

BUG: 436272